--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "id": "e28d62da-ceb0-46e7-9e06-774bc46f4bac",
   "name": "Data Editor Tool",
   "publisher": "Volodymyr Dvernytskyi",
-  "version": "1.0.1.1",
+  "version": "1.0.1.0",
   "brief": "https://vld-nav.com/",
   "description": "https://vld-nav.com/",
   "privacyStatement": "https://vld-nav.com/",
@@ -12,8 +12,8 @@
   "logo": "./logo.png",
   "dependencies": [],
   "screenshots": [],
-  "platform": "19.0.0.0",
-  "application": "19.0.0.0",
+  "platform": "18.0.0.0",
+  "application": "18.0.0.0",
   "idRanges": [
     {
       "from": 81000,
@@ -21,12 +21,7 @@
     }
   ],
   "contextSensitiveHelpUrl": "https://vld-nav.com/",
-  "runtime": "8.0",
-  "features": ["TranslationFile"],
-  "resourceExposurePolicy":
-    {
-      "allowDebugging": true,
-      "allowDownloadingSource": true,
-      "includeSourceInSymbolFile": true
-    }
+  "showMyCode": true,
+  "runtime": "7.2",
+  "features": ["TranslationFile"]
 }
